2009-06-09  Ryosuke Niwa  <rniwa@google.com>

        Reviewed by Eric Seidel.

        Changing editing/deleting/4866671.html to use a dumpAsText test instead of a pixel test
        so as to remove the platform dependency.

        * editing/deleting/4866671.html:

2009-06-09  Dean McNamee  <deanm@chromium.org>

        Reviewed by Oliver Hunt.

        Make sure the graphics backends are in sync with the canvas lineWidth state.
        https://bugs.webkit.org/show_bug.cgi?id=26187

        * fast/canvas/canvas-lineWidth.html: Added.
        * fast/canvas/canvas-lineWidth.js: Added.
        (compareRows):

2009-06-09  Michael Nordman  <michaeln@google.com>

        Reviewed by Eric Seidel.

        Proactively cancel pending requests at DocLoader dtor time,
        otherwise crashes can occur. 

        https://bugs.webkit.org/show_bug.cgi?id=26230
        http://code.google.com/p/chromium/issues/detail?id=12161

        * fast/frames/javascript-url-as-framesrc-crash-expected.txt: Added.
        * fast/frames/javascript-url-as-framesrc-crash.html: Added.

2009-06-09  Eric Seidel  <eric@webkit.org>

        Reviewed by Darin Adler.

        Fix ASSERT seen in shadow tree testing
        https://bugs.webkit.org/show_bug.cgi?id=25092

        * svg/custom/use-mutation-event-crash.svg: Added.

2009-06-09  Jian Li  <jianli@chromium.org>

        Reviewed by David Levin.

        Bug 26196: Fix the problem that worker's importScripts fails if the
        script URL is redirected from different origin.
        https://bugs.webkit.org/show_bug.cgi?id=26196

        Add a test case in the importScripts layout test to cover the scenario
        that the import script URL can come from different redirect origin.

        * http/tests/workers/resources/worker-importScripts.js:
        * http/tests/workers/worker-importScripts-expected.txt:

2009-06-09  Anand K. Mistry  <amistry@google.com>

        Reviewed by Dimitri Glazkov.
